Fixed some issues with image heights Signed-off-by: Lakmini Manthrirathna <manthrirathna.mal@gmail.com> Signed-off-by: Lakmini Manthrirathna <manthrirathna.mal@gmail.com>

--- a/HomePage.html
+++ b/HomePage.html
@@ -33,7 +33,7 @@
                 </div>
             </nav>
             <div>
-                <img src="me.png" class="img-responsive" id="me">
+                <img src="me.png" class="img-responsive" style="height: 100%;width: 100%" id="me">
             </div>
         </div>
 
