--- a/AboutMe.html
+++ b/AboutMe.html
@@ -56,18 +56,18 @@
             <p class="amp">  1<sup>st</sup> of June,2019.</p>
         </div>
 
-        <div class="col-lg-7 col-md-7 col-sm-12" id="am2"  style=" padding-left: 0px; padding-right: 0px ;margin-left: 0px;margin-right: 0px">
-            <span  style=" padding-left: 0px; padding-right: 0px ;margin-left: 0px;margin-right: 0px;float: left ;width:33%;">
-                <img src="web2.jpg" class="img-responsive amimg2">
-                <img src="culture1.jpg" class="img-responsive amimg2">
+        <div class="col-lg-7 col-md-7 col-sm-12" id="am2"  style=" padding-left: 0px; padding-right: 0px ;margin-left: 0px;margin-right: 0px;height: 100%">
+            <span  style=" padding-left: 0px; padding-right: 0px ;margin-left: 0px;margin-right: 0px;float: left ;width:33%;height: 100%">
+                <img src="web2.jpg" class="img-responsive amimg2" style="height: 50%">
+                <img src="culture1.jpg" class="img-responsive amimg2" style="height: 50%">
             </span>
-            <span  style=" padding-left: 0px; padding-right: 0px ;margin-left: 0px;margin-right: 0px;float: left;width:33%">
-                <img src="readin2.jpg" class="img-responsive" id=amimg1>
+            <span  style=" padding-left: 0px; padding-right: 0px ;margin-left: 0px;margin-right: 0px;float: left;width:33%;height: 100%">
+                <img src="readin2.jpg" class="img-responsive" id=amimg1 style="height: 100%">
             </span>
 
-            <span style=" padding-left: 0px; padding-right: 0px ;margin-left: 0px;margin-right: 0px;float: left;width:33%">
-                <img src="cat2.jpg" class="img-responsive amimg2">
-                <img src="writin1.jpg" class="img-responsive amimg2">
+            <span style=" padding-left: 0px; padding-right: 0px ;margin-left: 0px;margin-right: 0px;float: left;width:33%;height: 100%">
+                <img src="cat2.jpg" class="img-responsive amimg2" style="height: 50%">
+                <img src="writin1.jpg" class="img-responsive amimg2" style="height: 50%">
             </span>
         </div>
 
